<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009688"
    tools:context=".MainActivity">

    <View
        android:id="@+id/view"
        android:layout_width="426dp"
        android:layout_height="66dp"
        android:background="#072D42"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/view2"
        android:layout_width="424dp"
        android:layout_height="698dp"
        android:background="#112645"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="156dp"
        android:layout_height="72dp"
        android:text="@string/welcome"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#FBF5F5"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.147" />

    <Button
        android:id="@+id/button"
        android:layout_width="166dp"
        android:layout_height="71dp"
        android:background="#1C96C6"
        android:text="@string/login"
        android:textColor="#F6F2F2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.867" />

    <Button
        android:id="@+id/button2"
        android:layout_width="165dp"
        android:layout_height="73dp"
        android:background="#1C96C6"
        android:text="@string/sign_up"
        android:textColor="#F6F2F2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.937"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.87" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="376dp"
        android:layout_height="214dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.556"
        app:srcCompat="@drawable/icon_3"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView2"

        android:layout_width="48dp"
        android:layout_height="49dp"
        android:text="@string/to"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.295" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="133dp"
        android:layout_height="37dp"
        android:text="@string/mydcsapp"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.012" />
=======
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="Welcome"
        android:textColor="#F44336"
        android:textSize="100sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.271" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="250dp"
        android:layout_height="116dp"
        android:background="#0C009688"
        android:fontFamily="casual"
        android:text="To"
        android:textAlignment="center"
        android:textColor="#F44336"
        android:textSize="80sp"
        tools:layout_editor_absoluteX="168dp"
        tools:layout_editor_absoluteY="383dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="515dp"
        android:layout_height="129dp"
        android:text="MyDCS-App"
        android:textColor="#F44336"
        android:textSize="80sp"
        tools:layout_editor_absoluteX="70dp"
        tools:layout_editor_absoluteY="560dp" />


</androidx.constraintlayout.widget.ConstraintLayout>